--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="p5.min.js" defer></script>
     <script src="CCapture.all.min.js" defer></script>
     <script src="sketch.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.7.76/build/pdf.min.js" defer></script>
+    <script defer>window.addEventListener("DOMContentLoaded",()=>{if(window.pdfjsLib){pdfjsLib.GlobalWorkerOptions.workerSrc="https://cdn.jsdelivr.net/npm/pdfjs-dist@4.7.76/build/pdf.worker.min.js";}});</script>
   </head>
   <body>
     <main id="app-container">
@@ -492,6 +494,129 @@
                 />
                 <input type="text" id="bg-hex" class="hex-input" />
               </div>
+<div class="bg-mode-group">
+  <label>Tipo Sfondo</label>
+  <div class="bg-mode-options">
+    <label><input type="radio" name="bg-mode" value="color" id="bg-mode-color" checked /> Colore</label>
+    <label><input type="radio" name="bg-mode" value="image" id="bg-mode-image" /> Immagine</label>
+  </div>
+</div>
+
+<div class="file-picker-group" id="bg-file-group" style="display:none">
+  <label>Carica immagine (jpg, jpeg, png, webp, svg, pdf)</label>
+  <input type="file" id="bg-file" accept=".jpg,.jpeg,.png,.webp,.svg,.pdf,image/*,application/pdf" />
+  <div class="field-row" style="margin-top:8px">
+    <label>Adatta canvas all’immagine</label>
+    <label class="switch">
+      <input type="checkbox" id="bg-autosize" checked />
+      <span class="slider"></span>
+    </label>
+  </div>
+  <div class="bg-file-actions">
+    <button id="bg-clear-btn" class="secondary">Rimuovi immagine</button>
+  </div>
+  <p 
+  <div class="field-row">
+    <label>Carica da URL</label>
+    <div class="bg-url-row">
+      <input type="url" id="bg-url" placeholder="https://…/immagine.jpg, .png, .webp, .svg" />
+      <button id="bg-url-load" class="secondary">Carica</button>
+    </div>
+  </div>
+
+  <div class="field-row">
+    <label>Adattamento immagine</label>
+    <select id="bg-fit">
+      <option value="contain">Contain (tutto visibile)</option>
+      <option value="cover">Cover (riempi, può tagliare)</option>
+      <option value="stretch">Stretch (deforma)</option>
+      <option value="center">Center (senza scalare)</option>
+      <option value="tile">Tile (ripeti)</option>
+    </select>
+  <div class="field-row">
+    <label>Opacità immagine (%)</label>
+    <div class="bg-opacity-row">
+      <input type="range" id="bg-opacity" min="0" max="100" value="100" />
+      <input type="number" id="bg-opacity-num" min="0" max="100" value="100" />
+    </div>
+  </div>
+  <div class="field-row">
+    <label>Opacità blur (%)</label>
+    <div class="bg-opacity-row">
+      <input type="range" id="bg-blur-opacity" min="0" max="100" value="60" />
+      <input type="number" id="bg-blur-opacity-num" min="0" max="100" value="60" />
+    </div>
+  </div>
+
+
+  <div class="field-row">
+    <label>Fill con blur</label>
+    <label class="switch">
+      <input type="checkbox" id="bg-fill-blur" />
+      <span class="slider"></span>
+    </label>
+  </div>
+  <div class="field-row" id="bg-blur-row" style="display:none">
+    <label>Intensità blur</label>
+    <input type="number" id="bg-blur" min="0" max="50" value="12" />
+  </div>
+
+  <div class="field-row">
+    <label>Posizionamento</label>
+    <select id="bg-anchor">
+      <option value="center">Centro</option>
+      <option value="top-left">Alto-Sinistra</option>
+      <option value="top">Alto</option>
+      <option value="top-right">Alto-Destra</option>
+      <option value="left">Sinistra</option>
+      <option value="right">Destra</option>
+      <option value="bottom-left">Basso-Sinistra</option>
+      <option value="bottom">Basso</option>
+      <option value="bottom-right">Basso-Destra</option>
+    </select>
+  </div>
+
+  <div class="grid-2">
+    <div class="field-row">
+      <label>Offset X (px)</label>
+      <input type="number" id="bg-offset-x" value="0" step="1" />
+    </div>
+    <div class="field-row">
+      <label>Offset Y (px)</label>
+      <input type="number" id="bg-offset-y" value="0" step="1" />
+    </div>
+  </div>
+
+  </div>
+
+  <div class="field-row">
+    <label>Blocca dimensioni canvas</label>
+    <label class="switch">
+      <input type="checkbox" id="bg-lock-canvas" />
+      <span class="slider"></span>
+    </label>
+  </div>
+
+  <div class="field-row" id="bg-tile-scale-row" style="display:none">
+    <label>Scala tile (%)</label>
+    <input type="number" id="bg-tile-scale" min="10" max="400" step="10" value="100" />
+  </div>
+
+  <div class="bg-presets">
+    <div class="bg-presets__head">
+      <strong>Preset Sfondo</strong>
+      <div class="spacer"></div>
+      <button id="bg-preset-save" class="secondary">Salva preset</button>
+    </div>
+    <div class="bg-presets__save-row">
+      <input type="text" id="bg-preset-name" placeholder="Nome preset…" />
+      <label class="embed-check"><input type="checkbox" id="bg-preset-embed" checked /> Incorpora immagine (DataURL)</label>
+    </div>
+    <div id="bg-presets-list" class="bg-presets__list"></div>
+  </div>
+</div>
+
+
             </div>
             <div class="color-picker-group">
               <label>Colore primario</label>
@@ -541,12 +666,6 @@
               <button id="record-video-btn">Registra Video (.webm)</button>
               <button id="save-sequence-btn" style="margin-top: 10px">
                 Salva Sequenza (PNG)
-              </button>
-              <button id="offline-webm-btn" style="margin-top: 10px">
-                Offline CFR (WebM – CCapture)
-              </button>
-              <button id="offline-png-btn" style="margin-top: 10px">
-                Offline CFR (PNG + ZIP)
               </button>
               <p
                 id="export-status"
